<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/itm_audio"
        android:orderInCategory="100"
        android:title="@string/itm_audio"
        app:showAsAction="never" />
    <item
        android:id="@+id/itm_video"
        android:orderInCategory="90"
        android:title="@string/itm_video"
        app:showAsAction="never" />
    <item
        android:id="@+id/itm_camara"
        android:orderInCategory="80"
        android:title="@string/itm_camara"
        app:showAsAction="never" />
    <item
        android:id="@+id/itm_buscar"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="70"
        android:title="Buscar"
        app:showAsAction="ifRoom|collapseActionView" />

</menu>
