<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sandra.mi_nota.Fragment_Editar_Nota">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/fab_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbl_nota_e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/divider"
                android:text="@string/lbl_nota"
                android:textColor="@color/icons"
                android:textSize="22dp"
                />

            <TextView
                android:id="@+id/lbl_id_nota_e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/txt_titulo_e"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/txt_titulo" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="188dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/txt_descripcion_e"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/txt_descripcion"
                    android:inputType="textMultiLine" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/lbl_fecha_nota_e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/fab_margin">

                <Button
                    android:id="@+id/btn_guardar_nota_e"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_guardar"
                    android:background="@color/colorPrimaryDark"
                    android:layout_margin="@dimen/button_margin"
                    android:padding="@dimen/button_margin"
                    android:textColor="@color/primary_light"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
